// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack.config should return settings when NODE_ENV is development 1`] = `
Object {
  "devtool": "cheap-module-eval-source-map",
  "entry": Array [
    "stab",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "compact": true,
            "presets": Array [
              Array [
                "env",
                Object {
                  "modules": false,
                  "targets": Object {
                    "browsers": "last 1 version",
                  },
                },
              ],
              "react",
              "stage-1",
            ],
          },
        },
      },
      Object {
        "test": /\\\\\\.md\\$/,
        "use": Array [
          "html-loader",
          "markdown-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\?\\)\\$/,
        "use": Array [
          "file-loader",
          "image-webpack-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(eot\\|ttf\\|woff2\\?\\)\\$/,
        "use": "file-loader",
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "modules": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
            },
          },
          Object {
            "loader": "string-replace-loader",
            "options": Object {
              "multiple": Array [
                Object {
                  "flags": "g",
                  "replace": ".bespoke-parent",
                  "search": "__body",
                },
                Object {
                  "flags": "g",
                  "replace": ".bespoke-backdrop",
                  "search": "__bg",
                },
                Object {
                  "flags": "g",
                  "replace": ".bespoke-backdrop.section-title",
                  "search": "__section-title",
                },
              ],
            },
          },
        ],
      },
    ],
  },
  "name": "test",
  "output": Object {
    "filename": "[hash].js",
    "path": "stab",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.BASE_PATH": "\\".\\"",
        "process.env.CSS_PATH": "\\"stub/.\\"",
        "process.env.JS_PATH": "\\"stub/.\\"",
        "process.env.REMOTE_ORIGIN_URL": undefined,
        "process.env.SIDEBAR": "true",
        "process.env.SLIDE_PATH": "\\"stub/.\\"",
        "process.env.SNS": undefined,
        "process.env.THEME": "\\"\\"",
        "process.env.TITLE": "\\"test\\"",
        "process.env.URL": "\\"url\\"",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "description": "description",
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "image": "thumbnail",
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "siteName": "siteName",
        "template": "stub/stabDir",
        "templateParameters": [Function],
        "title": "test",
        "url": "url",
        "xhtml": false,
      },
    },
    StylishReporter {
      "rendered": Object {
        "footer": false,
        "header": false,
      },
      "state": Object {
        "active": 0,
        "hashes": Array [],
        "instances": 0,
        "time": 0,
        "totals": Object {
          "errors": 0,
          "time": 0,
          "warnings": 0,
        },
      },
    },
    HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
  ],
  "resolve": Object {
    "modules": Array [
      "node_modules",
      "stab",
    ],
  },
  "resolveLoader": Object {
    "modules": Array [
      "node_modules",
      "stab",
    ],
  },
}
`;

exports[`webpack.config should return settings when NODE_ENV is production 1`] = `
Object {
  "entry": Array [
    "stab",
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "compact": true,
            "presets": Array [
              Array [
                "env",
                Object {
                  "modules": false,
                  "targets": Object {
                    "browsers": "last 1 version",
                  },
                },
              ],
              "react",
              "stage-1",
            ],
          },
        },
      },
      Object {
        "test": /\\\\\\.md\\$/,
        "use": Array [
          "html-loader",
          "markdown-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\?\\)\\$/,
        "use": Array [
          "file-loader",
          "image-webpack-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(eot\\|ttf\\|woff2\\?\\)\\$/,
        "use": "file-loader",
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          "stub/",
          Object {
            "loader": "css-loader",
            "options": Object {
              "importLoaders": 2,
              "modules": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
            },
          },
          Object {
            "loader": "string-replace-loader",
            "options": Object {
              "multiple": Array [
                Object {
                  "flags": "g",
                  "replace": ".bespoke-parent",
                  "search": "__body",
                },
                Object {
                  "flags": "g",
                  "replace": ".bespoke-backdrop",
                  "search": "__bg",
                },
                Object {
                  "flags": "g",
                  "replace": ".bespoke-backdrop.section-title",
                  "search": "__section-title",
                },
              ],
            },
          },
        ],
      },
    ],
  },
  "name": "test",
  "optimization": Object {
    "minimizer": Array [
      UglifyJsPlugin {
        "options": Object {
          "cache": false,
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "parallel": true,
          "sourceMap": false,
          "test": /\\\\\\.js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "uglifyOptions": Object {
            "output": Object {
              "comments": /\\^\\\\\\*\\*!\\|@preserve\\|@license\\|@cc_on/,
            },
          },
          "warningsFilter": [Function],
        },
        "sourceMapsCache": WeakMap {},
      },
      OptimizeCssAssetsWebpackPlugin {
        "deleteAssetsMap": Object {},
        "options": Object {
          "assetNameRegExp": /\\\\\\.css\\$/g,
          "assetProcessors": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\$/g,
            },
          ],
          "canPrint": undefined,
          "cssProcessor": [Function],
          "cssProcessorOptions": Object {
            "discardComments": Object {
              "removeAll": true,
            },
            "safe": true,
          },
        },
        "phaseAssetProcessors": Object {
          "compilation.optimize-assets": Array [],
          "compilation.optimize-chunk-assets": Array [
            Object {
              "phase": "compilation.optimize-chunk-assets",
              "processor": [Function],
              "regExp": /\\\\\\.css\\$/g,
            },
          ],
          "emit": Array [],
        },
        "pluginDescriptor": Object {
          "name": "OptimizeCssAssetsWebpackPlugin",
        },
      },
    ],
  },
  "output": Object {
    "filename": "[hash].js",
    "path": "stab",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.BASE_PATH": "\\".\\"",
        "process.env.CSS_PATH": "\\"stub/.\\"",
        "process.env.JS_PATH": "\\"stub/.\\"",
        "process.env.REMOTE_ORIGIN_URL": undefined,
        "process.env.SIDEBAR": "true",
        "process.env.SLIDE_PATH": "\\"stub/.\\"",
        "process.env.SNS": undefined,
        "process.env.THEME": "\\"\\"",
        "process.env.TITLE": "\\"test\\"",
        "process.env.URL": "\\"url\\"",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "description": "description",
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "image": "thumbnail",
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "siteName": "siteName",
        "template": "stub/stabDir",
        "templateParameters": [Function],
        "title": "test",
        "url": "url",
        "xhtml": false,
      },
    },
    StylishReporter {
      "rendered": Object {
        "footer": false,
        "header": false,
      },
      "state": Object {
        "active": 0,
        "hashes": Array [],
        "instances": 0,
        "time": 0,
        "totals": Object {
          "errors": 0,
          "time": 0,
          "warnings": 0,
        },
      },
    },
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "[id].[hash].css",
        "filename": "[name].[hash].css",
      },
    },
    OccurrenceOrderPlugin {
      "preferEntry": undefined,
    },
    AggressiveMergingPlugin {
      "options": Object {},
    },
    GenerateSW {
      "config": Object {
        "chunks": Array [],
        "exclude": Array [
          /\\\\\\.map\\$/,
          /\\^manifest\\.\\*\\\\\\.js\\(\\?:on\\)\\?\\$/,
        ],
        "excludeChunks": Array [],
        "importScripts": Array [],
        "importWorkboxFrom": "cdn",
        "importsDirectory": "",
        "precacheManifestFilename": "precache-manifest.[manifestHash].js",
        "swDest": "service-worker.js",
      },
    },
  ],
  "resolve": Object {
    "modules": Array [
      "node_modules",
      "stab",
    ],
  },
  "resolveLoader": Object {
    "modules": Array [
      "node_modules",
      "stab",
    ],
  },
}
`;
